# roundtable

./: CONTRIBUTING.md  README.md  chain.yaml  persona-schema.yaml  pyproject.toml  rules.yaml
output-schemas/: actionable-signals.yaml  blindspots-list.yaml  consensus-matrix.yaml
personas/: dalio.yaml  deng-xiaoping.yaml  hayek.yaml  kahneman.yaml  munger.yaml
roundtable-web/: README.md  app.js  index.html  personas.js
src/roundtable/: __init__.py  app.py  cli.py  engine.py  loader.py  prompt_renderer.py
src/roundtable.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: deep-roundtable.md  full-prompt-template.md  persona-generator.md  quick-consensus.md
