[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roundtable"
version = "0.1.0"
description = "Multi-perspective structured discussion via LLM personas"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "streamlit>=1.30",
]

[project.scripts]
roundtable = "roundtable.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
roundtable = ["../personas/*.yaml", "../templates/*.md", "../output-schemas/*.yaml"]
